<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    app:contentPadding="2dp"
    app:cardBackgroundColor="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/avatarIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_default_img"
            />

           <TextView
               android:id="@+id/pseudonymTv"
               android:layout_toEndOf="@+id/avatarIv"
               android:text="@string/nombre"
               android:textColor="@color/colorBlack"
               android:textSize="16sp"
               android:textStyle="bold"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               />



        <TextView
            android:id="@+id/practicTv"
            android:text="@string/pr_ctica"
            android:layout_toEndOf="@id/avatarIv"
            android:textColor="@color/colorBlack"
            android:textSize="10sp"
            android:layout_below="@id/pseudonymTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/commentTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/practicTv"
            android:layout_toEndOf="@+id/avatarIv"
            android:text="@string/esto_es_un_comentario"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/commentTv"
            android:layout_toEndOf="@+id/avatarIv"
            android:text="@string/_14_12_2020_14_00"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textSize="10sp" />

        <ImageButton
            android:id="@+id/moreBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@id/pseudonymTv"
            android:background="@null"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_more_black" />

        <ImageButton
            android:id="@+id/likeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/timeTv"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/ic_like_black"
            android:text="@string/like"
            android:translationX="-8dp" />

        <TextView
            android:id="@+id/cLikesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/likeBtn"
            android:layout_alignBottom="@+id/timeTv"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-2dp"
            android:text="@string/_1_2k_likes"
            android:textColor="@color/colorPrimary"
            android:translationX="-35dp"
            android:translationY="-2dp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>