<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.amit.yoganet.RegisterActivity">
<!--TextView: Label Register-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/registrar_perfil"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        />
<!--EditText: Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL"/>
        <EditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="email" />
<!--EditText: Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@id/emailTIL"
        app:passwordToggleEnabled="true">


    <EditText
        android:id="@+id/passwordEt"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/user_policy"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/teal_200"
            android:id="@+id/userPolicy"
            android:layout_below="@+id/passwordTIL"/>
    <!--Create a highlighted text "UserPolicy" after the text "I agree to the"-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/user_policy_highlight"
            android:textSize="20sp"
            android:textColor="@color/teal_700"
            android:id="@+id/userPolicyText"
            android:layout_alignBottom="@+id/userPolicy"
            android:layout_toRightOf="@+id/userPolicy"/>

    <!--Button: Register User-->
    <!--GoogleSignInBtn: Sign in with google account-->
    <!--TextView: Click go to LoginActivity-->

    <Button
            android:id="@+id/registerBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userPolicy"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_reg"
            android:text="@string/registrarse" android:layout_centerInParent="true"/>

    <ImageButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/have_accountTv"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_google_s" />

    <TextView
        android:id="@+id/have_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ya_tienes_una_cuenta_iniciar_sesi_n"
        android:layout_below="@id/registerBtn"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorBlack"
        />

</RelativeLayout>