<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/white"
    app:contentPadding="3dp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<com.blogspot.atifsoftwares.circularimageview.CircularImageView
    android:id="@+id/avatarIv"
android:src="@drawable/ic_default_img_white"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_width="60dp"
    android:layout_height="60dp"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="345dp"
        android:layout_marginEnd="5dp"
        android:paddingRight="5dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/pseudonymTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:text="@string/seud_nimo"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <!--emailTv: -->

        <TextView
            android:id="@+id/typeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text ="@string/tipo"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado"/>


</LinearLayout>
    <!--Add icons to indecate blocked/unblocked-->
    <ImageView
        android:id="@+id/blockIv"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

</LinearLayout>
</androidx.cardview.widget.CardView>