<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/actualizar_contrase_a"
    android:textColor="@color/colorBlack"
    android:textSize="16sp"
    android:textStyle="bold"
    android:textAlignment="center"/>

    <!--EditText: Current/Old/Previous Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTIL"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:hint="@string/contras_a_actual"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--EditText: New Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPasswordTIL"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/newPasswordEt"
            android:inputType="textPassword"
            android:hint="@string/nueva_contrase_a"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Button update password-->
    <Button
        android:id="@+id/updatePasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_contrase_a1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="center"/>
</LinearLayout>