<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:id="@+id/messageLayout"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/profileIv"
            app:c_border_color="@color/teal_700"
            android:visibility="gone"
            android:src="@drawable/ic_default_img"/>

        <TextView
            android:id="@+id/messageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_sender"
            android:padding="15dp"
            android:text="@string/su_mensaje"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/messageIv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:padding="15dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_image_black"
            android:scaleType="fitCenter"
            android:background="@drawable/bg_sender"
            android:contentDescription="@string/todo" />


    </RelativeLayout>
    <TextView
        android:id="@+id/timeTv"
        android:layout_width="wrap_content"
        android:translationY="1dp"
        android:translationX="310dp"
        android:layout_height="wrap_content"
        android:text="@string/_23_12_21_23"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="9sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/isSeenTv"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:text="@string/delivered"/>


</LinearLayout>