<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="100dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
            android:id="@+id/textMessageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/bg_receiver"
    >
    <TextView
        android:id="@+id/pseudonymTv"
        android:text="@string/seud_nimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/messageTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/mensaje_del_usuario"
        android:textColor="@color/colorBlack"/>
    </LinearLayout>
    <!--ImageView: for image message-->


    <LinearLayout
            android:id="@+id/imageMessageLayout"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/pseudonymImageTv"
                android:text="@string/seud_nimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
        />
    <ImageView
            android:id="@+id/messageIv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_image_black"
            android:contentDescription="@string/todo"/>
    </LinearLayout>
    <TextView
        android:id="@+id/timeTv"
        android:layout_width="match_parent"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:layout_marginEnd="5dp"
        android:textSize="12sp"/>

</LinearLayout>