<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.amit.yoganet.MainActivity">

   <ImageView android:layout_height="250dp"
       android:layout_width="250dp"
       android:src="@drawable/ic_lotus"
       android:id="@+id/lotusImg"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="20dp"/>

   <!--Button: Register-->
   <TextView
           android:id="@+id/appTitle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/lotusImg"
           android:textSize="40sp"
           android:textAlignment="center"
           android:textColor="@color/green_ash"
           android:text="@string/app_title"/>
   <!--User Policy checkbox-->
   <Button
    android:id="@+id/register_btn"
    android:text="@string/registrarse"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="match_parent"
    android:drawableStart="@drawable/ic_reg"
    android:layout_height="wrap_content"
    android:layout_above="@id/login_btn"/>
   <!--Button: Login-->
   <Button
       android:id="@+id/login_btn"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="100dp"
       android:text="@string/iniciar_sesi_n"
       android:drawableStart="@drawable/ic_baseline_vpn_key_24"
       android:drawableEnd="@drawable/ic_google_s"
       style="@style/Widget.AppCompat.Button.Colored"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

</RelativeLayout>